# iptraf-ng

./: .gitignore  AUTHORS  CHANGES  GEN-VERSION-FILE  Makefile  Makefile.am  README  README.rvnamed  RELEASE-NOTES  autogen.sh  configure.ac  gen-version  iptraf-ng.spec  iptraf-ng.spec.in
Documentation/: Makefile  manual.sgml.in
src/: Makefile  Makefile.am  arphdr.h  attrs.h  bar.c  bar.h  capt-mmap-v2.c  capt-mmap-v3.c  capt-recvmmsg.c  capt-recvmsg.c  capt.c  capt.h  capture-pkt.c  cidr.c  cidr.h  counters.c  counters.h  deskman.c  deskman.h  det_bpf.c  det_bpf.h  detstats.c  detstats.h  dirs.h  error.c  error.h  externs.h  fltdefs.h  fltedit.c  fltlist.c  fltmgr.c  fltmgr.h  fltselect.c  fltselect.h  getpath.c  getpath.h  hostmon.c  hostmon.h  ifaces.c  ifaces.h  (+66 more)
src/tui/: input.c  input.h  labels.c  labels.h  listbox.c  listbox.h  menurt.c  menurt.h  msgboxes.c  msgboxes.h  tui.h  txbox.c  winops.c  winops.h
support/: Makefile  Makefile.am  listbox.c
