lib_LTLIBRARIES = libtextbox.la

libtextbox_la_CFLAGS = -Wall -Werror -std=gnu99 -pedantic
libtextbox_la_LDFLAGS = -avoid-version

libtextbox_la_SOURCES = input.c		input.h		\
						labels.c	labels.h	\
						listbox.c	listbox.h	\
						menurt.c	menurt.h	\
						msgboxes.c	msgboxes.h	\
						txbox.c		txbox.h		\
						winops.c    winops.h	\
						textbox.h
